# clean-code-workshop

./: .gitignore  README.md  pyproject.toml
src/: gilded_rose.py
tests/: acceptance_test.py  test_gilded_rose.py
